# ChangeLog for dev-util/codeblocks
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/codeblocks/ChangeLog,v 1.18 2010/07/02 22:04:11 dirtyepic Exp $

*codeblocks-10.05 (02 Jul 2010)

  02 Jul 2010; Ryan Hill <dirtyepic@gentoo.org>
  -codeblocks-1.0_pre20070618.ebuild, -codeblocks-8.02.ebuild,
  +codeblocks-10.05.ebuild:
  Version bump (bug #322315). Clean up ebuild and remove old.

  06 May 2010; Ryan Hill <dirtyepic@gentoo.org> codeblocks-8.02-r1.ebuild,
  +files/codeblocks-8.02-gsocket.patch, metadata.xml:
  Patch from upstream to fix building with USE="pch contrib" and new glib
  versions. (bug #307603)

  24 Jan 2010; Brent Baude <ranger@gentoo.org> codeblocks-8.02-r1.ebuild:
  keyworded ~arch for ppc, bug 295271

*codeblocks-8.02-r1 (29 Jul 2009)

  29 Jul 2009; Ryan Hill <dirtyepic@gentoo.org> +codeblocks-8.02-r1.ebuild,
  +files/codeblocks-8.02-gcc44.patch:
  Fix build w/ glibc-2.10. (bug #274256)
  Remove unicode USE flag - wxGTK-2.8 is always unicode, and configure
  option was removed. Use emake install.

  12 Feb 2009; Ryan Hill <dirtyepic@gentoo.org>
  +files/codeblocks-8.02-gcc43.patch, codeblocks-8.02.ebuild:
  Fix building with gcc-4.3 for bug #256218. Thanks to Nick S. Novikov for
  the patch.

*codeblocks-8.02 (01 Jun 2008)

  01 Jun 2008; Jurek Bartuszek <jurek@gentoo.org> +files/8.02-version.patch,
  +codeblocks-8.02.ebuild:
  Version bump (bug #211865)

  30 Jan 2008; Jurek Bartuszek <jurek@gentoo.org>
  codeblocks-1.0_pre20071215.ebuild:
  Minor fixes and changes (bug #199843)

  22 Dec 2007; Jurek Bartuszek <jurek@gentoo.org>
  -codeblocks-1.0_pre20070124.ebuild, -codeblocks-1.0_pre20070404.ebuild,
  -codeblocks-1.0_pre20070511.ebuild:
  Remove older versions

*codeblocks-1.0_pre20071215 (15 Dec 2007)

  15 Dec 2007; Jurek Bartuszek <jurek@gentoo.org>
  +codeblocks-1.0_pre20071215.ebuild:
  Version bump

  22 Sep 2007; Jurek Bartuszek <jurek@gentoo.org>